Better Fix for download